--- a/css/page.css
+++ b/css/page.css
@@ -575,7 +575,7 @@ body[data-page-id="wifi"] .oobe-body > .troubleshoot-link {
 }
 
 .wifi-item.selected {
-  background-color: var(--color-wifi-item-bg-selected);
+  background-color: var(--smtc-background-layer-solid);
   border-radius: var(--smtc-corner-ctrl-sm-rest, 8px);
 }
 
@@ -2154,8 +2154,4 @@ text-align: center;
   100% {
     width: 100%;
   }
-}
-
-#cancel-link {
-  padding: 20px;
 }
